k8s/flask-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
spec:
  selector:
    app: flask
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
